# setback

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yml
client/: .gitignore  App.tsx  README.md  app.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client/e2e/: game.spec.ts  helpers.ts  lobby.spec.ts
client/src/: App.tsx  index.css
client/src/components/: ActionButton.tsx  PlayingCard.tsx  SectionCard.tsx  ThemeToggle.tsx  Toast.tsx
client/src/context/: auth.tsx
client/src/hooks/: useGameSubscription.ts  useTheme.ts  useToasts.ts
client/src/lib/: api.ts  auth.ts  format.ts  storage.ts
client/src/screens/: GameScreen.tsx  LobbyScreen.tsx  WelcomeScreen.tsx
client/src/types/: setback.ts
deploy/: Pulumi.yaml  deploy.sh  remote-deploy.sh
python/: .dockerignore  .project  Caddyfile  Caddyfile.local  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requests.org  requirements.txt
python/alembic/: env.py
python/alembic/versions/: 20260518_000001_initial_schema.py
python/deploy/: Pulumi.dev.yaml  README.md  __main__.py  deploy.sh
python/docs/: sse-auth-guide.md
python/src/: config.py  db.py  logging.py  main.py  rate_limit.py  request.py
python/src/auth/: cookies.py  dev_routes.py  jwt.py  limits.py  models.py  router.py  routes.py  utils.py
python/src/auth/providers/: __init__.py  base.py  google.py
python/src/auth/sso/: __init__.py  base.py  google.py  models.py
python/src/game/: constants.py  events.py  exceptions.py  limits.py  manager.py  models.py  router.py  routes.py  scope.py  sse.py  types.py  utils.py
python/src/game/routes/: __init__.py  game.py  team.py
python/tests/: README.md  helpers.py
python/tests/integration/: test_server.py
python/tests/unit/: __init__.py  test_manager.py  test_server.py
src/: db.py  main.py  request.py
src/auth/: jwt.py  models.py  router.py  secrets.py  utils.py
src/auth/sso/: __init__.py  base.py  google.py  models.py
src/game/: manager.py  models.py  router.py  types.py  utils.py  websocket.py
tests/: helpers.py
tests/integration/: test_server.py
tests/unit/: test_manager.py  test_server.py
