[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-app-name"
version = "0.1.0"
description = "Your app description"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["your", "keywords"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "python-multipart",
    "passlib[argon2]>=1.7.4",
    "authlib>=1.6.4",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "sqlmodel>=0.0.25",
    "redis>=6.4.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/your-app-name"
Repository = "https://github.com/yourusername/your-app-name"

[project.scripts]
your-app = "your_app.main:app"

[tool.hatch.version]
path = "src/your_app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/your_app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_executable = ".venv/bin/python"
