[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[project]
name = "setback"
version = "0.1.0"
description = "Server hosting the setback card game"
authors = [
    {name = "Troy Fischer", email = "troytfischer@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "alembic>=1.16.5",
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "python-multipart",
    "passlib[argon2]>=1.7.4",
    "authlib>=1.6.5",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "sqlmodel>=0.0.25",
    "redis>=6.4.0",
    "structlog>=25.5.0",
    "types-authlib>=1.6.5.20251005",
    "pydantic-settings>=2.12.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/troyfischer/setback"
Repository = "https://github.com/troyfischer/setback"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_executable = ".venv/bin/python"
disable_error_code = ["no-untyped-def"]

[tool.pyright]
reportUnknownVariableType = "none"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-env>=1.1.5",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "fakeredis>=2.32.1",
    "testcontainers[postgres,redis]>=4.14.2",
    "pulumi-digitalocean>=4.37.1",
]
